Closed Bug 552062 Opened 15 years ago Closed 15 years ago

Black Background on certain Flash Objects

Categories

(Core Graveyard :: Plug-ins, defect)

x86
Windows 7
defect
Not set
normal

Tracking

(blocking1.9.2 .4+, status1.9.2 .4-fixed)

RESOLVED FIXED
Tracking Status
blocking1.9.2 --- .4+
status1.9.2 --- .4-fixed

People

(Reporter: By-Tor, Assigned: jimm)

References

()

Details

(Keywords: verified1.9.2)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a3pre) Gecko/20100312 Minefield/3.7a3pre (.NET CLR 3.5.30729) Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a3pre) Gecko/20100312 Minefield/3.7a3pre (.NET CLR 3.5.30729) ID:20100312160658 Since push http://hg.mozilla.org/mozilla-central/rev/53a85c489708 certain flash objects have black background where once they seemed to be transparent. Reproducible: Always Steps to Reproduce: 1. Go go http://weather.weatherbug.com/NY/New%20York-weather.html?zcode=z5602&zip=10001 2. Look at wind indicator Actual Results: Where once the background of the wind indicator was blue, now it's black as it gets updated. Expected Results: The background should have remained blue.
Blocks: 527707
Version: unspecified → Trunk
Status: UNCONFIRMED → RESOLVED
Closed: 15 years ago
Resolution: --- → DUPLICATE
Reopening this bug as bug 551945 fixed this issue with d2d disabled but the bug now occurs with d2d enabled. Sometimes while the page is loading you can see the black background instead of seeing through the content. Sometimes when this happens the black will disappear when the page finishes loading but not always, switching tabs and then back seems to fix it then. Also always see black on hulu controls even after the page loads. On the imageshack buttons as mentioned in bug 552052 but that only happens during load.
Status: RESOLVED → UNCONFIRMED
Resolution: DUPLICATE → ---
Status: UNCONFIRMED → NEW
Ever confirmed: true
It'd be interesting to see if this happens on normal GDI if you make these flash objects partially transparent. If this is the case then OOPP is giving an issue with double pass rendering most likely.
Attached file uploader test case
In gdi, I'm seeing artifacts in the initial rendering of the uploader.
(In reply to comment #4) > Created an attachment (id=432438) [details] > uploader test case > > In gdi, I'm seeing artifacts in the initial rendering of the uploader. Hrm, so this isn't so much a D2D bug. It's just more prevalent in D2D since it -always- uses double pass rendering.
(In reply to comment #5) > (In reply to comment #4) > > Created an attachment (id=432438) [details] [details] > > uploader test case > > > > In gdi, I'm seeing artifacts in the initial rendering of the uploader. > > Hrm, so this isn't so much a D2D bug. It's just more prevalent in D2D since it > -always- uses double pass rendering. Seems that way. A regression range might be handy, we landed the IsDoublePass fixes, plus some race resolution code for paints last week. We likely regressed from those, I'm guessing it was the race resolution code. I'll hopefully have more info here in a bit once I get an updated debug build built.
Blocks: OOPP
No longer blocks: 527707
hmm, double pass rendering appears to be working correctly. Not sure yet what's causing this.
Depends on: LorentzBeta2
w/GDI rendering in today's nightly, I'm not able to reproduce this today. Anyone else care to confirm?
I still can on imageshack at least
Attached patch fixSplinter Review
Simple way to reproduce this, open the test case, resize the window in, and then drag the window out slowly revealing the uploader. Fix - reset the clip rect on the shared dib prior to rendering alpha extraction backgrounds and the second pass. Apparently flash mucks with the clipping when it paints.
Assignee: nobody → jmathies
Attachment #436009 - Flags: review?(bent.mozilla)
Blocks: LorentzBeta2
No longer depends on: LorentzBeta2
Comment on attachment 436009 [details] [diff] [review] fix Seems fine to me!
Attachment #436009 - Flags: review?(bent.mozilla) → review+
Status: NEW → RESOLVED
Closed: 15 years ago15 years ago
Resolution: --- → FIXED
Verified fixed using hourly Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.3a4pre) Gecko/20100405 Minefield/3.7a4pre cset: 67f4c546d403 Verified on the testcase and the link in comment 0
Status: RESOLVED → VERIFIED
Attachment #436009 - Flags: approval1.9.2.4?
blocking1.9.2: --- → ?
Comment on attachment 436009 [details] [diff] [review] fix a=beltzner for 1.9.2.4
Attachment #436009 - Flags: approval1.9.2.4? → approval1.9.2.4+
blocking1.9.2: ? → .4+
This doesn't appear to be fully addressed yet. While the flash test case and the flash weather site seem to be working ok, the following silverlight site isn't - http://www.microsoft.com/surface/en/us/default.aspx The background underneath the video panel and text is supposed to show through. Sometimes it does, but mousing over the area of the silverlight control tends to flip parts of the background to black. Bug 558434 is related - in tab previews the background is displayed white. I'll look into this over the weekend.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Please file a new bug, this one has already landed on branch and the branch tracking and verification will start getting really confused.
Status: REOPENED → RESOLVED
Closed: 15 years ago15 years ago
Resolution: --- → FIXED
Verified for 1.9.2 with Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US; rv:1.9.2.4pre) Gecko/20100413 Namoroka/3.6.4pre using testcase for flash.
Keywords: verified1.9.2
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: