Bug 552062 - [OOPP] Black Background on certain Flash Objects. r=bent.